[package]
name = "clean-recently-used"
version = "0.1.0"
authors = ["Lucas Werkmeister <mail@lucaswerkmeister.de>"]
edition = "2021"
repository = "https://github.com/lucaswerkmeister/clean-recently-used/"
license = "BlueOak-1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.28.0"
itertools = "0.10.1"
chrono = "0.4.24"
directories = "5.0.0"
percent-encoding = "2.1.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
