[package]
name = "clean-recently-used"
version = "0.1.0"
authors = ["Lucas Werkmeister <mail@lucaswerkmeister.de>"]
edition = "2021"
repository = "https://github.com/lucaswerkmeister/clean-recently-used/"
license = "BlueOak-1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.36.1"
itertools = "0.13.0"
chrono = "0.4.31"
directories = "5.0.1"
percent-encoding = "2.3.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
