[package]
name = "clean-recently-used"
version = "0.1.0"
authors = ["Lucas Werkmeister <mail@lucaswerkmeister.de>"]
edition = "2021"
repository = "https://github.com/lucaswerkmeister/clean-recently-used/"
license = "BlueOak-1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.37.2"
itertools = "0.14.0"
chrono = "0.4.39"
directories = "6.0.0"
percent-encoding = "2.3.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
